web-studio-sass

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -6,3 +6,4 @@ $footer-bg-color:#2F303A;
 $icon-color:#afb1b8;
 $footer-icon-bg-color:#454546;
 $input-bg-color:#2196f300;
+$backdrop-color:#00000033;
