--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -58,5 +58,10 @@ a {
 }
 
 body {
-  font-family: "Jost";
+  font-family: "Roboto";
+  line-height: normal;
+}
+.container{
+  width: 1200px;
+  margin: 0 auto;
 }
