--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
-@import"./sass/base/reset";
-@import"./sass/base/colors";
+@import"../base/reset";
+@import"../base/colors";
 .footer{
   background-color: $footer-bg-color;
   padding-top:60px ;
