--- a/css/main.css
+++ b/css/main.css
@@ -1401,3 +1401,19 @@ body {
   letter-spacing: 0.54px;
   margin: 63px 24px 63px 24px;
 }
+
+.work-menu-btn {
+  width: 125px;
+  height: 38px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #F5F4FA;
+  border: none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-menu-btn:hover {
+  background-color: #2196F3;
+  color: #FFFFFF;
+}
