--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -7,3 +7,4 @@ $icon-color:#afb1b8;
 $footer-icon-bg-color:#454546;
 $input-bg-color:#2196f300;
 $backdrop-color:#00000033;
+$input-border-color:#21212133;
