--- a/sass/pages/main-page/_main-menu.scss
+++ b/sass/pages/main-page/_main-menu.scss
@@ -1,7 +1,7 @@
 @import"../../base/reset";
 @import"../../base/colors";
 .main-menu{
-background-image: url(../../../img/menu-bg.jpg);
+background-image: url(../img/menu-bg.jpg);
 background-repeat: no-repeat;
 background-position: center;
 height: 600px;
