--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ body {
   width: 24px;
   height: 24px;
   z-index: 1;
-  fill: #afb1b8;
+  fill: #ffffff;
 }
 
 .subscribe-btn {
@@ -216,6 +216,8 @@ body {
   line-height: 30px; /* 187.5% */
   letter-spacing: 0.96px;
   margin-left: 12px;
+  align-items: center;
+  justify-content: center;
 }
 
 .subscribe-form {
@@ -343,14 +345,13 @@ body {
 }
 .header .mobile-header {
   display: flex;
-  align-content: center;
-  gap: 256px;
+  justify-content: space-between;
+  width: 100vw;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .header .nav {
   display: none;
-}
-.header .logo {
-  margin-left: 10px;
 }
 @media screen and (min-width: 768px) {
   .header .nav {
@@ -360,6 +361,9 @@ body {
   .header .nav-menu {
     width: 0px;
     height: 0px;
+  }
+  .header .phone-list {
+    width: 353px;
   }
 }
 
@@ -527,7 +531,6 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 0;
 }
 
 .is-hidden {
@@ -600,7 +603,7 @@ body {
   width: 448px;
   height: 40px;
   border-radius: 4px;
-  border: 1px solid rgba(33, 150, 243, 0);
+  border: 1px solid rgba(33, 33, 33, 0.2);
   padding-left: 24px;
   outline: none;
 }
@@ -891,7 +894,7 @@ body {
 }
 
 .main-menu {
-  background-image: url(../../../img/menu-bg.jpg);
+  background-image: url(../img/menu-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   height: 600px;
@@ -1008,6 +1011,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 94px;
 }
 
 .our-advantages-img {
@@ -1145,6 +1149,10 @@ body {
 
 .svg-container-item:hover {
   background-color: #2196F3;
+}
+
+.icon:hover {
+  fill: #ffffff;
 }
 
 html,
