--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -9,7 +9,6 @@
 background-color: $backdrop-color;
 opacity: 1;
 transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-opacity: 0;
 }
 .is-hidden{
   opacity: 0;
@@ -73,7 +72,7 @@ margin-left: 40px;
   width: 448px;
 height: 40px;
 border-radius: 4px;
-border: 1px solid $input-bg-color;
+border: 1px solid $input-border-color;
 padding-left: 24px;
 outline: none
 }
