--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,6 @@
 @import"../base/colors";
 .header{
   display: flex;
-  justify-content: space-between;
   gap: 40px;
   margin-top: 26px;
   margin-bottom: 20px;
@@ -30,6 +29,9 @@ padding-right: 15px;
       display: flex;
       gap: 50px;
     }
+    .logo{
+      margin-right: 140px;
+    }
     .nav-menu{
    width: 0px;
    height: 0px;
@@ -37,6 +39,28 @@ padding-right: 15px;
     .phone-list{
       width: 353px;
     }
+     .mobile-header{
+      display: none;
+     }
+     .phone-list{
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+     }
+  }
+
+  @media screen and (min-width:1024px){
+       .mobile-header{
+      display: none;
+     }
+       .logo{
+      margin-right: 230px;
+    }
+       .phone-list{
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+     }
   }
   
 }
