--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,13 @@
-@import"./base/reset";
-@import"./base/typography";
-@import"./base/colors";
-@import"./layout/footer";
-@import"./layout/header";
-@import"./layout/modal";
-@import"./pages/main-page/clients";
-@import"./pages/main-page/main-menu";
-@import"./pages/main-page/our-advantages";
-@import"./pages/main-page/team";
-@import"./pages/main-page/what-we-do";
-@import"./pages/portfolio-page/work-menu";
+@use"./base/reset";
+@use"./base/container";
+@use"./base/typography";
+@use"./base/colors";
+@use"./layout/footer";
+@use"./layout/header";
+@use"./layout/modal";
+@use"./pages/main-page/clients";
+@use"./pages/main-page/main-menu";
+@use"./pages/main-page/our-advantages";
+@use"./pages/main-page/team";
+@use"./pages/main-page/what-we-do";
+@use"./pages/portfolio-page/work-menu";
