--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,23 @@ body {
 }
 
 .container {
-  width: 1200px;
+  min-width: 320px;
   margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 html,
@@ -129,11 +144,6 @@ a {
 body {
   font-family: "Roboto";
   line-height: normal;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .footer {
@@ -325,15 +335,9 @@ body {
   line-height: normal;
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-}
-
 .header {
   display: flex;
-  gap: 40px;
-  margin-top: 26px;
+  justify-content: space-between;
   margin-bottom: 20px;
   align-content: center;
   padding-top: 40px;
@@ -342,14 +346,13 @@ body {
   width: 40px;
   height: 40px;
 }
-.header .mobile-header {
-  display: flex;
-  justify-content: space-between;
-  width: 100vw;
-  padding-left: 15px;
-  padding-right: 15px;
-}
 .header .nav {
+  display: none;
+}
+.header .phone {
+  display: none;
+}
+.header .logo-mobile {
   display: none;
 }
 @media screen and (min-width: 768px) {
@@ -361,14 +364,11 @@ body {
     margin-right: 140px;
   }
   .header .nav-menu {
-    width: 0px;
+    width: auto;
     height: 0px;
   }
-  .header .phone-list {
-    width: 353px;
-  }
-  .header .mobile-header {
-    display: none;
+  .header .phone {
+    display: flex;
   }
   .header .phone-list {
     display: flex;
@@ -376,12 +376,9 @@ body {
     gap: 10px;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .header .mobile-header {
     display: none;
-  }
-  .header .logo {
-    margin-right: 230px;
   }
   .header .phone-list {
     display: flex;
@@ -455,7 +452,7 @@ body {
 }
 
 .phone-item svg:hover {
-  fill: #2196F3;
+  fill: #2196f3;
 }
 
 .phone-item {
@@ -464,8 +461,8 @@ body {
 }
 
 .phone-item:hover {
-  color: #2196F3;
-  fill: #2196F3;
+  color: #2196f3;
+  fill: #2196f3;
   animation-name: shakeX;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -538,11 +535,6 @@ a {
 body {
   font-family: "Roboto";
   line-height: normal;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .backdrop {
@@ -804,11 +796,6 @@ body {
   line-height: normal;
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-}
-
 .clients-item {
   border-radius: 4px;
   border: 1px solid #AFB1B8;
@@ -911,11 +898,6 @@ body {
   line-height: normal;
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-}
-
 .main-menu {
   background-image: url(../img/menu-bg.jpg);
   background-repeat: no-repeat;
@@ -1014,11 +996,6 @@ body {
   line-height: normal;
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-}
-
 .our-advantages-list {
   display: flex;
   gap: 40px;
@@ -1111,11 +1088,6 @@ a {
 body {
   font-family: "Roboto";
   line-height: normal;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .team {
@@ -1240,11 +1212,6 @@ a {
 body {
   font-family: "Roboto";
   line-height: normal;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .what-we-do-title {
@@ -1375,11 +1342,6 @@ a {
 body {
   font-family: "Roboto";
   line-height: normal;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .work-menu-list {
