--- a/css/main.css
+++ b/css/main.css
@@ -1095,14 +1095,21 @@ body {
   padding-bottom: 84px;
   text-align: center;
 }
+.team .team-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .team .team-list {
+    display: flex;
+    flex-direction: row;
+  }
+}
 
 .team-h2 {
   margin-bottom: 50px;
-}
-
-.team-list {
-  display: flex;
-  gap: 30px;
 }
 
 .team-item {
@@ -1143,7 +1150,7 @@ body {
 }
 
 .svg-container-item:hover {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 .icon:hover {
