--- a/sass/pages/main-page/_clients.scss
+++ b/sass/pages/main-page/_clients.scss
@@ -12,9 +12,12 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 .clients-list{
   display: flex;
   justify-content: center;
-  gap: 30px;
+  // gap: 30px;
   margin-top:50px ;
   margin-bottom:94px ;
+      row-gap: 30px;
+    column-gap: 135px;
+    flex-wrap: wrap;
 }
 .clients-image{
   width:106px ;
