--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,6 +1,8 @@
 .container{
   min-width: 320px;
   margin: 0 auto;
+padding-left: 15px;
+padding-right: 15px;
   @media screen and (min-width:480px) {
       width: 480px;
   }
