--- a/sass/pages/main-page/_our-advantages.scss
+++ b/sass/pages/main-page/_our-advantages.scss
@@ -5,6 +5,12 @@
   gap: 40px;
   justify-content: center;
       margin-bottom: 70px;
+      flex-direction: column;
+      @media screen and (min-width:768px){
+        display: flex;
+        flex-direction: row;
+      }
+
 }
 .our-advantages-title{
   margin-bottom: 10px;
@@ -14,6 +20,12 @@
 flex-direction: column;
 justify-content: center;
 margin-top: 94px;
+align-items: center;
+@media screen and (min-width:768px){
+  display: flex;
+  align-items: start;
+  
+}
 }
 .our-advantages-img{
  width: 70px;
