--- a/css/main.css
+++ b/css/main.css
@@ -1251,11 +1251,16 @@ body {
 }
 
 .what-we-do {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   text-align: center;
   margin-bottom: 94px;
+}
+@media screen and (min-width: 1200px) {
+  .what-we-do {
+    display: flex;
+  }
 }
 
 .what-we-do-gallery {
