--- a/sass/pages/main-page/_what-we-do.scss
+++ b/sass/pages/main-page/_what-we-do.scss
@@ -4,11 +4,15 @@
   margin-bottom: 30px;
 }
 .what-we-do{
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   text-align: center;
   margin-bottom: 94px;
+  @media screen and (min-width:1200px) {
+ display: flex;
+  
+}
 }
 .what-we-do-gallery{
 display: flex;
