--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,9 +10,18 @@
  margin-bottom: 10px;
 }
 .footer-container{
-  margin-left: 100px;
   display: flex;
- justify-content: center;
+ flex-direction: column;
+ @media screen and (min-width:768px) {
+  justify-content: center;
+  flex-direction: row;
+ }
+}
+.footer-list{
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 60px;
 }
 .footer-text{
   color:$text-logo-border-color;
@@ -49,6 +58,7 @@ background-color: $hover-btn-color;
 }
 .svg-container-footer{
   margin-left: 70px;
+      margin-bottom: 60px;
 }
 .send-img{
   width: 24px;
@@ -71,6 +81,7 @@ letter-spacing: 0.96px;
 margin-left: 12px;
 align-items: center;
     justify-content: center;
+    margin-top: 20px;
 }
 .subscribe-form{
   display: flex;
@@ -79,7 +90,7 @@ align-items: center;
 .subscribe-wrapper{
   display: flex;
   flex-direction: column;
-margin-left: 93px;
+    align-items: center;
 
 }
 .subscribe-input{
