--- a/sass/pages/main-page/_our-advantages.scss
+++ b/sass/pages/main-page/_our-advantages.scss
@@ -24,13 +24,15 @@ align-items: center;
 @media screen and (min-width:768px){
   display: flex;
   align-items: start;
-  
+  .our-advantages-img{
+    margin-left: 70px;
+  }
 }
 }
 .our-advantages-img{
  width: 70px;
 height: 70px;
-margin-left: 70px;
+margin-left: 0px;
 margin-bottom: 15px
 }
 .our-advantages{
