--- a/css/main.css
+++ b/css/main.css
@@ -924,7 +924,7 @@ body {
 }
 
 .main-menu {
-  background-image: url(../../../img/main-phone-bg.png);
+  background-image: url(../img/main-phone-bg.png);
   background-repeat: no-repeat;
   background-position: center;
   height: 600px;
