--- a/css/main.css
+++ b/css/main.css
@@ -1042,6 +1042,12 @@ body {
   .our-advantages-list {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .our-advantages-list {
+    flex-wrap: nowrap;
   }
 }
 
@@ -1063,6 +1069,9 @@ body {
   }
   .our-advantages-item .our-advantages-img {
     margin-left: 70px;
+  }
+  .our-advantages-item .our-advantages-text {
+    width: 300px;
   }
 }
 
